Stopped horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -475,6 +475,7 @@ textarea, .messageBody {
   left: 0%;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .pubContent {
